change tmux custom configuration file path

--- a/tmux.conf
+++ b/tmux.conf
@@ -104,5 +104,5 @@ bind BTab select-pane -t:.-
 unbind '"'
 bind '"' choose-window
 
-source ~/.tmux.powerline.conf
+source ~/.rc/tmux.powerline.conf
 
